<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_translator"
    style="?attrTranslatorView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.translatorfragment.TranslatorFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/translator_cv_input"
        style="?attr/attrTranslatorCvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/translator_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/translator_to_favorite_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:backgroundTint="@color/secondaryBackgroundColor"
                android:clickable="true"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/translator_til"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_active"
                app:tint="@color/favorite_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/translator_til"
                style="?attrTranslatorTil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/translator_to_favorite_fab"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/translator_tiet"
                    style="?attrTranslatorTiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/translator_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translator_cv_input"
        app:layout_constraintVertical_chainStyle="packed"
        tools:listitem="@layout/translator_item" />

</androidx.constraintlayout.widget.ConstraintLayout>