...
    style="?attrTranslatorItemCv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translator_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/translator_item_iv"
            android:layout_width="64dp"
...

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/translator_item_barrier_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="translator_item_favorite_btn" />

        <CheckBox
            android:id="@+id/translator_item_favorite_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="6dp"
...
