...

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/favorite_item_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="favorite_item_delete" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/favorite_item_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
...
